Fix desktop file and better icon

--- a/NeronGPS.desktop
+++ b/NeronGPS.desktop
@@ -4,7 +4,7 @@ Encoding=UTF-8
 Name=NeronGPS.desktop
 Comment[]=GPS Application
 Exec=NeronGPS
-Icon=NeronGPS.png
+Icon=NeronGPS/NeronGPS.png
 Type=Application
 Name[]=NeronGPS
 Name[en_US]=NeronGPS.desktop
